-changed: settings version has been increased
+added: new shadow type
+added: loading text to startup logo
-fixed: auto key repeat when holding down a key and typing
-changed: new multyplayer networking system
+added: new debug info line, current multyplayer ping
-changed: Collision hitboxes are now pre grouped into combo boxes before collisions are calculated 

0.9.0_Early_Access
-changed: new collision detection system
+added: new NPC system
+added: NPC enemy Goon
+added: level 13
-fixed: check point preview no being in correct position while on 3D stage
-fixed: HUD not being renderd on top of level in 3D while in the level creator
+added: level 14
-fixed: game sounds ignoring the set sound volume

0.8.2_Early_Access
-fixed: coin placement preview was too small in 3D stages
+changed: automatic update installer is now available on Mac OS for future versions
-fixed: settings menu titles attempting to displaying above the window
-fixed: default level creator author name not being presistant through game restarts
-changed: capitlized text on certan buttons
-changed: reduced certain strage components overscan

0.8.1_Early_Access
+added: Universal error handler (crashes will now always show an error window)
+added: grid mode indicator in level creator
-fixed: tutorial crashing on unix based systems
+added: new sound type: narration
-changed: setting version is now 4
+added: new setting narration volume
+added: new settings page: sound
-changed: narration mode setting is now under the sound page
-changed: when adding a sound in the level creator there is now a choice between narration and normal sound
-changed: all previously added sounds will be treated as narrations by default
+added: narration "notification" when a narration sound is playing and the narration volume is less then 20
+added: 3D Blueprints in level creator
-changed: new level complete sound (thanks SuperTylerMan)
+added: new setting disable menu transitions